--- a/beneficios.html
+++ b/beneficios.html
@@ -59,6 +59,7 @@
                     </div>
                 </article>     
             </section>
+            <!--aqui iria el video video-->
         </div>  
       </div> 
     </header>
