--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>mobile legends</title>
   <meta name="description" content="quieres jugar">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body> 
   <!--nav--> 
