--- a/beneficios.html
+++ b/beneficios.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>mobile legends</title>
   <meta name="description" content="quieres jugar">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body> 
   <!--nav--> 
@@ -23,8 +24,7 @@
             
             <div id="beneficios"> 
                 
-            </div>
-  <!--logo-->          
+            </div>          
           <div class="col-2">
             <h1>
               <a href="">
